[package]
name = "tunnelclient"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]

[dependencies]
acme-client = "0.4"
env_logger = "0.3"
error-chain = "0.10"
get_if_addrs = { git = "https://github.com/maidsafe-archive/get_if_addrs" }
log = "0.3"
pagekite = { git = "https://github.com/fabricedesre/pagekite-rs" }
registration_types = { git = "https://github.com/moziot/registration_server" }
reqwest = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
url = { version = "1.4", features = ["query_encoding"] }
